--- a/courses.html
+++ b/courses.html
@@ -134,7 +134,7 @@
 							<div class="row">
 								<div class="col-md-8 col-md-offset-2 text-center slider-text">
 									<div class="slider-text-inner">
-										<h1 class="heading-section">Our Course</h1>
+										<h1 class="heading-section">Our Courses</h1>
 										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 									</div>
 								</div>
