--- a/index.html
+++ b/index.html
@@ -517,7 +517,9 @@
 										<li class="pricing__feature">No Ebook</li>
 										<li class="pricing__feature">Limited Registered User</li>
 									</ul>
-									<button class="pricing__action">Choose plan</button>
+									<button class="pricing__action">Choose PLANS
+										
+									</button>
 								</div>
 							</div>
 						</div>
